# ad24-4-fancyproject

./: README.md  aggregate_master.py  predict_prices.py  presentation_concept.html  pyproject.toml  requirements.txt  visualize_master.py
.github/workflows/: publish.yml
data_acquisition/: GDP_Per_Capita_2024_worldbank_Data.csv  GDP_Per_Capita_2024_worldbank_Series - Metadata.csv  Meteorite_Landings_NASA_sanitized.csv  meteorite_prices.csv  meteorite_prices_src_urls.txt  scraper_unique_urls.txt
data_acquisition/Global-AridityIndex_v3_annual/: et0_v3_yr_sd.tfw  et0_v3_yr_sd.tif.aux.xml  et0_v3_yr_sd.tif.vat.dbf  et0_v3_yr_sd.tif.xml
data_acquisition/ai_et0/: ai_et0.tfw  ai_et0.tif.xml
data_acquisition/sanitization/: sanitizer.py  sanitizer_prices.py
data_acquisition/scraper/: scraper.py
data_sanitized/: aridity_grid.csv  master.csv  meteorite_prices_sanitized.csv
deployment/: DEPLOYMENT.md  build_static.py  requirements-build.txt
docs/: _quarto.yml  data_report.qmd  index.qmd  interactive_map.qmd  meeting_notes.qmd  project_charta.qmd  theme.scss  viz_design_report.qmd
docs/_freeze/data_report/execute-results/: html.json
output_data/: Meteorite_Landings_NASA_sanitized_clean_coordinates.csv  Meteorite_Landings_NASA_with_prices.csv
src/: app.py  visualize_master_data.py
src/helpers/: aggregate_master_from_dataset.py  meteorite_price_scraper.py  predict_meteorite_prices.py
src/helpers/sanitizers/: sanitizer_meteorite_coordinates.py  sanitizer_meteorite_landings.py  sanitizer_meteorite_prices.py
src/templates/: index.html
(+1 files in other folders)
