[project]
name = "meteorite-visualization-with-prices"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "affine==2.4.0",
    "attrs==26.1.0",
    "blinker==1.9.0",
    "branca==0.8.2",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "cligj==0.7.2",
    "flask==3.1.3",
    "folium==0.20.0",
    "idna==3.13",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jupyterlab>=4.4.7",
    "markupsafe==3.0.3",
    "matplotlib>=3.10.6",
    "narwhals==2.20.0",
    "numpy==2.4.4",
    "packaging==26.2",
    "pandas==3.0.2",
    "playwright>=1.59.0",
    "plotly==6.7.0",
    "pycountry==26.2.16",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "rasterio==1.5.0",
    "requests==2.33.1",
    "reverse-geocoder==1.5.1",
    "scipy==1.17.1",
    "seaborn>=0.13.2",
    "six==1.17.0",
    "urllib3==2.7.0",
    "werkzeug==3.1.8",
    "xyzservices==2026.3.0",
]
